docs/api/qiskit/1.0/qiskit.circuit.library.ZGate.mdx
---
title: ZGate (v1.0)
description: API reference for qiskit.circuit.library.ZGate in qiskit v1.0
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.ZGate
---

# ZGate

<Class id="qiskit.circuit.library.ZGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/standard_gates/z.py#L29-L148" signature="qiskit.circuit.library.ZGate(*args, _force_mutable=False, **kwargs)" modifiers="class">
  Bases: [`SingletonGate`](circuit_singleton#qiskit.circuit.singleton.SingletonGate "qiskit.circuit.singleton.SingletonGate")

  The single-qubit Pauli-Z gate ($\sigma_z$).

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`z()`](qiskit.circuit.QuantumCircuit#z "qiskit.circuit.QuantumCircuit.z") method.

  **Matrix Representation:**

$$
Z = \begin{pmatrix}
1 & 0 \\
0 & -1
\end{pmatrix}
$$

  **Circuit symbol:**

  ```python
       ┌───┐
  q_0: ┤ Z ├
       └───┘
  ```

  Equivalent to a $\pi$ radian rotation about the Z axis.

  <Admonition title="Note" type="note">
    A global phase difference exists between the definitions of $RZ(\pi)$ and $Z$.

$$
RZ(\pi) = \begin{pmatrix}
-i & 0 \\
0 & i
\end{pmatrix}
= -i Z
$$
  </Admonition>

  The gate is equivalent to a phase flip.

$$
|0\rangle \rightarrow |0\rangle \\
|1\rangle \rightarrow -|1\rangle
$$

  Create new Z gate.

  ## Attributes

  ### base\_class

  <Attribute id="qiskit.circuit.library.ZGate.base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioural perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.ZGate.base_class "qiskit.circuit.library.ZGate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrised gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrised gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### condition

  <Attribute id="qiskit.circuit.library.ZGate.condition">
    The classical condition on the instruction.
  </Attribute>

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.ZGate.condition_bits">
    Get Clbits in condition.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.ZGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.ZGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.ZGate.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.ZGate.label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.ZGate.mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.ZGate.name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.ZGate.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.ZGate.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.ZGate.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.ZGate.unit">
    Get the time unit of duration.
  </Attribute>

  ## Methods

  ### control

  <Function id="qiskit.circuit.library.ZGate.control" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/standard_gates/z.py#L96-L127" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None, annotated=False)">
    Return a (multi-)controlled-Z gate.

    One control returns a CZ gate.

    **Parameters**

    *   **num\_ctrl\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")) – number of control qubits.
    *   **label** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)") *| None*) – An optional label for the gate \[Default: `None`]
    *   **ctrl\_state** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")  *|*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)") *| None*) – control state expressed as integer, string (e.g.\`\`’110’`), or ``None`. If `None`, use all 1s.
    *   **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – indicates whether the controlled gate can be implemented as an annotated gate.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.ZGate.inverse" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/standard_gates/z.py#L129-L141" signature="inverse(annotated=False)">
    Return inverted Z gate (itself).

    **Parameters**

    **annotated** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")) – when set to `True`, this is typically used to return an [`AnnotatedOperation`](qiskit.circuit.AnnotatedOperation "qiskit.circuit.AnnotatedOperation") with an inverse modifier set instead of a concrete [`Gate`](qiskit.circuit.Gate "qiskit.circuit.Gate"). However, for this class this argument is ignored as this gate is self-inverse.

    **Returns**

    inverse gate (self-inverse).

    **Return type**

    [ZGate](#qiskit.circuit.library.ZGate "qiskit.circuit.library.ZGate")
  </Function>

  ### power

  <Function id="qiskit.circuit.library.ZGate.power" github="https://github.com/Qiskit/qiskit/tree/stable/1.0/qiskit/circuit/library/standard_gates/z.py#L143-L145" signature="power(exponent)">
    Raise gate to a power.
  </Function>
</Class>

